# SRM-Vision-2022

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build.sh  clean.sh  main.cpp
assets/: armor_blue_24.avi  one_armor.mkv
assets/models/: rune_detector_model.onnx
benchmark/: CMakeLists.txt  neon.cpp  rsqrt.cpp  sse2.cpp  trigonometric.cpp
cache/: KE0210010101.txt
cmake/: FindTensorRT.cmake  Nvidia_ToolsConfig.cmake  UtilsConfig.cmake  VisualConfig.cmake
config/: all-cams-config.yaml  all-lens-config.yaml  bullet-data.yaml
config/cameras/: HV00E56446766.mfs  HV00E56446766.txt  HV00F02724098.txt  HV_C18_60MMF28_016_D27551310.mfs  KE0210010101.txt  KE0210010102.txt  MV-CA003-21UC_00D59818552.mfs  MV-CA003-21UC_00F02724098.mfs  MV-CA016-10UC_00D27551310.mfs
config/hero/: camera-init.yaml  ekf-param.yaml  matrix-init.yaml  offset-param.yaml  outpost-detector-param.yaml  outpost-param.yaml  predict-param.yaml  setoff-param-new.yaml  setoff-param.yaml  trajectory-param.yaml  video-init.yaml
config/infantry/: camera-init.yaml  ekf-param.yaml  matrix-init.yaml  offset-param.yaml  predict-param.yaml  rune-detector-param.yaml  rune-param.yaml  rune-predictor-param.yaml  setoff-param.yaml  trajectory-param.yaml  video-init.yaml
config/infantry3/: camera-init.yaml  predict-param.yaml  rune-param.yaml  setoff-param.yaml  trajectory-param.yaml
config/infantry4/: camera-init.yaml  matrix-init.yaml  offset-param.yaml  predict-param.yaml  trajectory-param.yaml
config/sentry/: camera-init.yaml  ekf-param.yaml
config/sentry_higher/: predict-param.yaml  setoff-param.yaml  video-init.yaml
config/sentry_lower/: camera-init.yaml  ekf-param.yaml  matrix-init.yaml  predict-param.yaml  setoff-param.yaml  trajectory-param.yaml  video-init.yaml
config/test/: camera-init.yaml
docs/: Doxyfile
log/: SRM2021.ERROR  SRM2021.INFO  SRM2021.WARNING  SRM2021.screw-Inspiron-7590.screw.log.ERROR.20220223-190744.8595  SRM2021.screw-Inspiron-7590.screw.log.ERROR.20220223-195503.17187  SRM2021.screw-Inspiron-7590.screw.log.ERROR.20220223-195539.17323  SRM2021.screw-Inspiron-7590.screw.log.ERROR.20220223-195838.17900  SRM2021.screw-Inspiron-7590.screw.log.ERROR.20220223-235813.4124  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-190545.8166  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-190658.8404  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-190722.8517  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-190741.8595  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-190955.8845  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-191007.8919  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-191054.9032  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-191441.9640  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-191459.9739  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-191541.9931  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-191920.11297  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-191944.11447  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-192002.11605  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-192026.11795  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-192052.11994  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-192202.12315  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-192246.12544  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-192257.12629  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-192415.12982  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-192444.13142  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-192452.13217  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-192506.13327  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-194530.14784  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-194541.14880  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-194553.14968  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-194603.15052  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-194614.15126  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-194702.15364  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-194738.15567  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-194756.15682  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-194809.15787  SRM2021.screw-Inspiron-7590.screw.log.INFO.20220223-194822.15865  (+52 more)
modules/bullet-trajectory-solver/: air-resistance-model.cpp  air-resistance-model.h  ballistic-model.cpp  ballistic-model.h  pitch-angle-solver.cpp  pitch-angle-solver.h  trajectory-solver.cpp  trajectory-solver.h
modules/camera-base/: camera-base.h  camera-factory.h  camera_base.h  camera_factory.h
modules/camera-dh/: camera-dh.cpp  camera-dh.h  camera_dh.cpp  camera_dh.h
modules/camera-hik/: camera-hik.cpp  camera-hik.h  camera_hik.cpp
modules/cmdline-arg-parser/: cmdline_arg_parser.cpp  cmdline_arg_parser.h
modules/compensator/: compensator.cpp  compensator.h
modules/compensator-approximate/: compensator-approximate.cpp  compensator-approximate.h
modules/compensator-model/: compensator-model.cpp  compensator-model.h
modules/controller-base/: controller_base.cpp  controller_base.h  controller_factory.h
modules/controller-hero/: controller_hero.cpp  controller_hero.h  controller_hero_debug.h
modules/controller-infantry/: controller_infantry.cpp  controller_infantry.h  controller_infantry_debug.h  controller_test.cpp
modules/controller-infantry3/: controller_infantry3.cpp  controller_infantry3.h  controller_infantry3_debug.h
modules/controller-infantry4/: controller_infantry4.cpp  controller_infantry4.h  controller_infantry4_debug.h
modules/controller-infantry5/: controller_infantry5.cpp  controller_infantry5.h  controller_infantry5_debug.h
modules/controller-sentry-higher/: controller_sentry_higher.cpp  controller_sentry_higher.h  controller_sentry_higher_debug.h
modules/controller-sentry-lower/: controller_sentry_lower.cpp  controller_sentry_lower.h  controller_sentry_lower_debug.h
test/: CMakeLists.txt  fsm.cpp  predictor_outpost.cpp  traj-solver.cpp
tools/: CMakeLists.txt  hv_cfg_gen.cpp
(+156 files in other folders)
